kubernetes-manifests/services/ingress/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-ingress
  annotations:
    networking.gke.io/managed-certificates: "sandbox-cert"
    networking.gke.io/v1beta1.FrontendConfig: "sandbox-ingress-frontend-config"
spec:
  rules:
  - http:
      paths:
      - path: /auth
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth
            port:
              number: 3000
      - path: /users
        pathType: ImplementationSpecific
        backend:
          service:
            name: user
            port:
              number: 8080
...
